--- a/cryptoden/templates/cryptoden/index.html
+++ b/cryptoden/templates/cryptoden/index.html
@@ -12,19 +12,24 @@
             </div>
             <div class="card-c">
                 <div class="row">
-                    <div class="col-4">
+                    <div class="col-2">
                         <div class="m-4">
                             <h4>W3lc0m3</h4>
                         </div>
                     </div>
-                    <div class="col-4">
+                    <div class="col-2">
                         <div class="m-4">
                             <p><i>{{ request.user }}</i></p>
                         </div>
                     </div>
                     <div class="col-4">
+                        <div class="m-4">
+                            <p>Login to save your usage history</p>
+                        </div>
+                    </div>
+                    <div class="col-2">
                         <div class="m-3">
-                            <a class="btn btn-light" href="{% url 'cryptoden:crypto-logout' %}">Logout</a>
+                            <a class="btn btn-light" href="{% url 'cryptoden:crypto-logout' %}">Login</a>
                         </div>
                     </div>
                 </div>
