--- a/templates/cryptoden_main.html
+++ b/templates/cryptoden_main.html
@@ -13,7 +13,19 @@
     <title>Textual Cryptography</title>
 </head>
 <body>
-    {% block content %}{% endblock content %}
+    
+    {% if messages %}
+    <ul class="messages">
+        {% for message in messages %}
+        <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+        {% endfor %}
+    </ul>
+    {% endif %}
+
+    {% block content %}
+
+    {% endblock content %}
+
     <footer>
         <div class="container">
             <div class="row">
