--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -1,5 +1,4 @@
 {% extends 'index.html' %}
-{% load widget_tweaks %}
 {% load static %}
 
 {% block banner-profile %}
@@ -174,7 +173,7 @@
             {% csrf_token %}
             {% for field in form %}
                 <div class="form-group">
-                    <div class="contact-field">{{ field|add_class:"form-control" }}</div>
+                    <div class="contact-field">{{ field }}</div>
                     {% if field.errors %}
                     <div class="alert alert-danger">
                         {% for error in field.errors %}
